src/components/eventButton/EventButton.scss
@import '../../styles/colors';

.Kalend__Event__animate {
  animation-duration: 0.3s;
  -webkit-animation-fill-mode: forwards;
  -moz-animation-fill-mode: forwards;
  -o-animation-fill-mode: forwards;
  -ms-animation-fill-mode: forwards;
  animation-name: Kalend__EventDetail_animationShow;
  animation-delay: 0s;
}

.Kalend__Event {
  border-radius: 6px !important;
  z-index: 2;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  color: white;
  opacity: 1 !important;

  &-month {
    @extend .Kalend__Event;
    padding-left: 1px;
    margin-bottom: 1px;
    align-items: center;
    min-height: auto !important;
  }

  &-normal {
    @extend .Kalend__Event;
  }

  &-header {
    @extend .Kalend__Event;
    padding: 1px;
    padding-left: 3px;
    align-items: center;
    animation-duration: 0.3s;
    -webkit-animation-fill-mode: forwards;
    -moz-animation-fill-mode: forwards;
    -o-animation-fill-mode: forwards;
    -ms-animation-fill-mode: forwards;
    animation-name: Kalend__EventDetailHeader_animationShow;
    animation-delay: 0.5s;
  }

  &-agenda {
    @extend .Kalend__Event;
    height: 65px !important;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 12px;
  }
}

.Kalend__EventButton__elevation {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4) !important;
  z-index: 9999 !important;
  cursor: grab !important;
}

@keyframes Kalend__EventDetailHeader_animationShow {
  0% {
    visibility: hidden;
    //transform: scale(0.5);
  }
  100% {
    visibility: visible;
    //transform: scale(1)
  }
}

@keyframes Kalend__EventDetail_animationShow {
  0% {
    opacity: 0.2;
    //transform: scale(0.5);
  }
  100% {
    opacity: 1;
    //transform: scale(1)
  }
}

